fix overflow scroll for pc

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -931,7 +931,7 @@ body {
   }
   
   /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-  div.content {
+  .content {
     margin-left: 150px;
     padding: 1px 16px;
   }
